Added back `/texture/:id/:type` & `/texture/:id`
