# src/v2/controllers/raw.ts
@@ -1,5 +1,6 @@
 import { Get, Route } from 'tsoa';
 import * as collections from '../firestorm';
+import { ErrorResponse } from '../tools/interfaces';
 
 interface RawResponse {
   [key: string]: any;
@@ -8,11 +9,8 @@ interface RawResponse {
 @Route('raw')
 export default class Raw {
   @Get('/:collection')
-  public async getRawCollection(collection: string): Promise<RawResponse> {
-    if (!collections[collection]) return Promise.reject(
-      new Error(`This collection does not exist! ${collections}`)
-    )
-
+  public async getRawCollection(collection: string): Promise<RawResponse | ErrorResponse> {
+    if (!collections[collection]) return { error: `This collection does not exist!` };
     return collections[collection].read_raw();
   }
 }
